fixed divs overlapping

--- a/css/index.css
+++ b/css/index.css
@@ -192,5 +192,5 @@ ul li{
 }
 .screen-section{
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 }
